# isoSeqQC

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
apps/: addremaps.cpp  exoncoverage.cpp  partialmaps.cpp
docs/: CMakeLists.txt  Doxyfile.in
include/: helperFunctions.hpp  isoseqAlgn.hpp
src/: helperFunctions.cpp  isoseqAlgn.cpp
tests/: badGFF.gff  goodGFF.gff  headerless.bam  longSC.bam  longSCmid.bam  longSCrc.bam  messyGFF.gff  negStrand.bam  noOverlapRealign.bam  nomRNA.gff  oneRecord.bam  oneRecordRev.bam  oneRecordSC.bam  oneRecordWithSecondary.bam  posNegYak.gff  posSorted.bam  posStrand.bam  randomNoise.bam  realignWithSC.bam  remappedOriginals.bam  remappedPortions.bam  shortRead.bam  testAlgn.bam  testAlignment.bam  testGFF.gff  tests.cpp  unSorted.bam
